--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -167,6 +167,7 @@ header h1 {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
+    border: #00B8D9 solid 2px;
     transition-property:background-color;
     transition-duration:1s;
     position: relative;
