--- a/assets/css/extra_angebote.css
+++ b/assets/css/extra_angebote.css
@@ -31,3 +31,122 @@
 body {
     margin: 0;
 }
+
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+
+.maincontent .auswahl {
+    padding-top: 1px;
+    background-color: var(--dark);
+    padding-bottom: 20px;
+}
+
+.maincontent .auswahl h1 {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    font-size: 30px;
+}
+
+.maincontent .auswahl span {
+    font-family: 'Lato', sans-serif;
+    color: var(--gray);
+    line-height: 25px;
+}
+
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+/* ====================================================== */
+
+.maincontent .produkte {
+    padding-top: 1px;
+    background-image: radial-gradient(#3C4858 , #273444);
+    padding-bottom: 20px;
+}
+
+.maincontent .produkte h1 {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    font-size: 30px;
+}
+
+.maincontent .produkte h2 {
+    color: var(--gray);
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.maincontent .produkte .links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.maincontent .produkte .links a {
+    background-color: var(--dark);
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    margin-left: 40px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 50px;
+    padding-left: 50px;
+    border: var(--info) solid 2px;
+    transition-property:background-color;
+    transition-duration:1s;
+}
+
+.maincontent .produkte .links a:hover {
+    background-color: #3C4858;
+    text-decoration: none;
+}
+
+.maincontent .produkte h3 {
+    color: var(--gray);
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 30px;
+    font-weight: 600;
+}
+
+.maincontent .produkte span {
+    color: var(--gray);
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    margin-top: 30px;
+    font-weight: 500;
+}
+
+.maincontent .produkte info {
+    color: var(--warning);
+    font-size: 24px;
+}
+
+.maincontent .produkte a {
+    color: var(--info);
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.maincontent .produkte a:hover {
+    text-decoration: underline;
+}
