--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 :root {
     --blue: #103d7e;
     --indigo: #6e00ff;
@@ -12,492 +15,132 @@
     --white: #FFF;
     --gray: #C0CCDA;
     --gray-dark: #3C4858;
-    --grey-dark02: #43484a;
     --primary: #306EFF;
     --secondary: #EFF2F7;
     --success: #36B37E;
     --info: #00B8D9;
     --warning: #FFAB00;
-    --box: #3e4557;
     --danger: #FF5630;
     --light: #EFF2F7;
     --dark: #273444;
     --neutral: #FFF;
     --white: #FFF;
-    --white2: #c4c4c4;
-    --white-grey: #707070;
 }
 
 body {
-    margin: 0;
+    padding: 0;
+    background-color: #1A1A1A;
 }
 
-/* Navbar */
-header {
-    background-color: var(--gray-dark);
-    padding-bottom: 20px;
-}
-
-header nav {
-    padding-top: 28px;
-    display: flex;
-    justify-content: center;
-}
-
-header nav a {
-    color: var(--white);
-    font-family: 'Roboto', sans-serif;
-    margin-left: 10px;
-    margin-right: 10px;
-    text-decoration: none;
-}
-
-header nav .active {
-    font-weight: 600;
-    text-decoration: underline;
-}
-
-header nav a:hover {
-    text-decoration: underline;
+.trennstrich::after {
+    content: "";
+    display: block;
+    background-color: #103d7e;
+    width: 10.8125rem;
+    height: 0.125rem;
+    margin-top: 0.75rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 header h1 {
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-    font-size: 18px;
-    line-height: 10px;
-    color: var(--gray);
-    font-weight: 500;
-}
-
-
-/* Vorstellung */
-.maincontent .vorstellung {
-    padding-top: 1px;
-    background-color: var(--dark);
-
-}
-
-.maincontent .vorstellung h1 {
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    font-size: 30px;
-}
-
-.maincontent .vorstellung .text {
     font-family: 'Roboto', sans-serif;
+    text-align: center;
+    color: var(--cyan);
+    margin-top: 40px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-right: 33%;
+    margin-left: 33%;
+}
+
+header .navbar {
+    font-family: 'Open Sans', sans-serif;
     display: flex;
     justify-content: center;
 }
 
-.maincontent .vorstellung .text span {
-    text-align: center;
-    font-size: 17px;
-    color: var(--white2);
+header a {
+    color: white;
+    margin: 25px;
+    margin-top: 5px;
+    text-decoration: none;
 }
 
-.maincontent .vorstellung .text span a {
-    color: var(--cyan);
+header a:hover {
+    text-decoration: underline;
+}
+
+header .activ:hover {
     text-decoration: none;
+}
+
+header .activ {
     font-weight: 600;
 }
 
-.maincontent .vorstellung .pictures {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
+main {
+    margin-top: 25px;
 }
 
-.maincontent .vorstellung .pictures img {
-    width: 5%;
-    border-radius: 200px;
+label {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    color: white;
+    background-color: var(--teal);
+    margin-left: 47%;
+    margin-right: 47%;
+    border-radius: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+main h1 {
+    text-align: center;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 30px;
+    font-weight: 800;
+    color: var(--gray);
+}
+
+main span {
+    font-family: 'Open Sans', sans-serif;
+    display: block;
+    text-align: center;
+    color: var(--gray);
+    line-height: 1px;
+    font-weight: 600;
+}
+
+main .row {
+    display: flex;
+    justify-content: center;
+}
+
+main .box {
+    background-color: #262626;
     margin-left: 100px;
     margin-right: 100px;
-}
-
-/* Pictures Float */
-.maincontent .vorstellung .pictures .img01 {
-    transform: translatey(0px);
-    animation: float 2s ease-in-out infinite;
-}
-
-.maincontent .vorstellung .pictures .img02 {
-    transform: translatey(0px);
-    animation: float 3s ease-in-out infinite;
-}
-
-.maincontent .vorstellung .pictures .img03 {
-    transform: translatey(0px);
-    animation: float 4s ease-in-out infinite;
-}
-
-.maincontent .vorstellung .pictures .img04 {
-    transform: translatey(0px);
-    animation: float 5s ease-in-out infinite;
-}
-
-/* Vorteile */
-.maincontent .vorteile {
-    background-image: radial-gradient(#3C4858 , #273444);
-    padding-top: 1px;
-    padding-bottom: 20px;
-}
-
-.maincontent .vorteile h1 {
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    font-size: 30px;
-}
-
-.maincontent .vorteile .row {
-    display: flex;
-    box-sizing: border-box;
-    justify-content: space-between;
-}
-
-.maincontent .vorteile .row .box {
-    border-radius: 10px;
-    background-color: var(--box);
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 40px;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    transition-property:background-color;
-    transition-duration:1s;
-    position: relative;
-}
-
-.maincontent .vorteile .row .box:hover{
-    transition-property:background-color;
-    transition-duration:1s;
-    background-color: #2e3542;
-}
-
-.maincontent .vorteile .row .box .imagebox {
+    margin-top: 50px;
+    border-radius: 20px;
+    border: #2e2d2d solid 1.5px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 10px;
     padding-top: 10px;
-    margin-bottom: 20px;
-    width: 75px;
-    align-items: center;
-    margin: auto;
-    display: block;
 }
 
-.maincontent .vorteile .row .box h1 {
+main .box h1 {
     font-family: 'Roboto', sans-serif;
-    color: var(--white);
-    text-align: center;
-    margin-bottom: 0px;
-}
-
-.maincontent .vorteile .row .box h2 {
-    font-family: 'Lato', sans-serif;
-    color: var(--white2);
-    margin-left: 20px;
-    margin-right: 20px;
-    font-size: 16px;
-    text-align: center;
-    font-weight: 400;
-}
-
-/* CP */
-.maincontent .cp {
-    padding-top: 1px;
-    background-image: radial-gradient(#293c57 , #273444);
-    padding-bottom: 20px;
-}
-
-.maincontent .cp h1 {
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    font-size: 30px;
-}
-
-.maincontent .cp .container {
-    display: flex;
-    justify-content: center;
-}
-
-.maincontent .cp img {
-    width: 16%;
-    border-radius: 30px;
-}
-
-.maincontent .cp span {
-    font-family: 'Lato', sans-serif;
-    color: var(--white);
-    margin-top: 4%;
     font-size: 20px;
+    line-height: 25px;
+}
+
+main .box span {
+    margin-top: 10px;
+    line-height: 25px;
     font-weight: 500;
-    margin-left: 20px;
-    line-height: 30px;
-}
-
-.maincontent .cp span .lila {
-    color: var(--pink);
-    margin: 0;
-    font-weight: 600;
-}
-
-.maincontent .cp span a {
-    color: var(--info);
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.maincontent .cp span a:hover {
-    text-decoration: underline;
-}
-
-/* Meilensteine */
-
-.maincontent .meilensteine {
-    background-color: var(--dark);
-    padding-top: 1px;
-}
-
-.maincontent .meilensteine h1  {
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    font-size: 30px;
-}
-
-.maincontent .meilensteine span {
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-    color: var(--gray);
-    font-size: 17px;
-}
-
-.maincontent .meilensteine span strong {
-    font-style: italic;
-}
-
-.maincontent .meilensteine .row {
-    display: flex;
-    box-sizing: border-box;
-    justify-content: space-between;
-}
-
-.maincontent .meilensteine .row .box {
-    border-radius: 10px;
-    background-color: transparent;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 40px;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    transition-property:background-color;
-    transition-duration:1s;
-    position: relative;
-}
-
-.maincontent .meilensteine .row .box .imagebox {
-    padding-top: 10px;
-    margin-bottom: 20px;
-    width: 75px;
-    align-items: center;
-    margin: auto;
-    display: block;
-}
-
-.maincontent .meilensteine .row .box h1 {
-    font-family: 'Roboto', sans-serif;
-    color: var(--white);
-    text-align: center;
-    margin-bottom: 0px;
-}
-
-.maincontent .meilensteine .row .box h2 {
-    font-family: 'Lato', sans-serif;
-    color: var(--white2);
-    margin-left: 20px;
-    margin-right: 20px;
-    font-size: 16px;
-    text-align: center;
-    font-weight: 400;
-}
-
-
-/* Footer */
-
-footer {
-    background-color: var(--gray-dark);
-    padding-top: 1px;
-}
-
-footer .line {
-    display: flex;
-    justify-content: space-between;
-}
-
-footer span {
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-    color: var(--gray);
-    font-size: 14px;
-    font-weight: 600;
-}
-
-/* ========================= */
-
-footer .rechtliches {
-    font-family: 'Lato', sans-serif;
-    margin-left: 20%;
-    margin-top: 30px;
-}
-
-footer .rechtliches span {
-    color: white;
-    font-weight: 600;
-    font-size: 18px;
-}
-
-footer .rechtliches a {
-    color: var(--gray);
-    text-decoration: none;
-    line-height: 30px;
-    font-weight: 500;
-}
-
-footer .rechtliches a:hover {
-    text-decoration: underline;
-}
-
-/* ========================= */
-
-footer .sonstiges {
-    font-family: 'Lato', sans-serif;
-    margin-right: 20%;
-    margin-top: 30px;
-}
-
-footer .sonstiges span {
-    color: white;
-    font-weight: 600;
-    font-size: 18px;
-}
-
-footer .sonstiges a {
-    color: var(--gray);
-    text-decoration: none;
-    line-height: 30px;
-}
-
-footer .sonstiges a:hover {
-    text-decoration: underline;
-}
-
-
-
-/* Transition - Float */
-@keyframes float {
-    0% {
-        box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
-        transform: translatey(0px);
-    }
-    50% {
-        box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
-        transform: translatey(-20px);
-    }
-    100% {
-        box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
-        transform: translatey(0px);
-    }
-}
-
-/* Responsive */
-@media only screen and (max-width: 1600px) {
-    .maincontent .vorstellung .pictures img {
-        width: 8%;
-    }
-}
-
-@media only screen and (max-width: 1300px) {
-    .maincontent .vorteile .row .box04 {
-        display: none;
-    }
-    .maincontent .meilensteine .row .box04 {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 1020px) {
-    .maincontent .cp img {
-        display: none;
-    }
-    .maincontent .cp span {
-        text-align: center;
-        margin-top: 0%;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    .maincontent .vorstellung .pictures img {
-        width: 8%;
-    }
-}
-
-@media only screen and (max-width: 750px) {
-    .maincontent .vorteile .row {
-        display: block;
-    }
-    .maincontent .vorteile .row .box {
-        margin: 0;
-    }
-    .maincontent .meilensteine .row {
-        display: block;
-    }
-    .maincontent .meilensteine .row .box {
-        margin: 0;
-    }
-    .maincontent .vorteile .row .box04{
-        display: block;
-    }
-    .maincontent .meilensteine .row .box04{
-        display: block;
-    }
-    .maincontent .produkte .container img {
-        display: none;
-    }
-    .maincontent .produkte .container h1 {
-        text-align: center;
-    }
-    .maincontent .produkte .container h2 {
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .maincontent .vorstellung .pictures img {
-        width: 20%;
-    }
-}
-
-@media only screen and (max-width: 421px) {
-    .maincontent .produkte h1 {
-        line-height: 40px;
-    }
-}
-
-@media only screen and (max-width: 365px) {
-    header nav a {
-        font-size: 15px;
-    }
-    .maincontent .vorstellung .pictures img {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 381px) {
-    header h1 {
-        line-height: 20px;
-    }
 }
